# whisper.cpp

examples/whisper.gui/: CMakeLists.txt  README.md  whisper-gui-airgap.ps1  whisper-gui-airgap.sh
